<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">{codeBG}</string>
    <string name="settings">com.cab404.matrix.SettingsActivity</string>

    <string name="description">Wallpaper with procedurally generated Java-like code.</string>
    <string name="height_label">Height of visible area</string>
    <string name="speed_label">Speed</string>
    <string name="by_line_label">Add code line by line</string>
    <string name="text_size">Font size</string>


    <string name="line_by_line">Code is added by line at time.</string>
    <string name="char_by_char">Code is added by char at time.</string>
    <string name="serialized">Geeky way to transport settings.</string>
    <string name="presets">Color schemas.</string>

    <string name="lps">lines/sec</string>
    <string name="cps">chars/sec</string>


    <string-array name="colors">
        <item>Background</item>
        <item>Functions</item>
        <item>Signs</item>
        <item>Strings</item>
        <item>Variables</item>
        <item>Numbers</item>
        <item>Keywords</item>
    </string-array>

</resources>